<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reddit Underground</string>
    <string name="manual_entry_text">Manually Enter a Subreddit</string>
    <string name="action_settings">Settings</string>
    <string name="autofilled_subreddit_text">http://www.reddit.com/r/</string>
    <string name="cache_button">Cache Subreddit Data</string>
    <string name="display_button">Display</string>
    <string name="user_login_text">Login To Your Reddit Account</string>
    <string name="delete_all">Delete All</string>
    <string name="noComments">No comments to be found here</string>

</resources>
