
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.mikedaguillo.reddit_underground.StartScreen">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:id="@+id/scrollView">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/manualEntryLayout"
                    android:layout_marginBottom="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/welcome"
                        android:textSize="25sp"
                        android:id="@+id/welcomeText"
                        android:layout_alignParentTop="true"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/welcomeText"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/subreddit_entry_text_rel_layout">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/autofilled_subreddit_text"
                            android:id="@+id/autofilledSubredditText"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignBottom="@+id/enterSubredditText"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/enterSubredditText"
                            android:layout_toRightOf="@+id/autofilledSubredditText"
                            android:layout_toEndOf="@+id/autofilledSubredditText" />

                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_login_text"
                        android:id="@+id/loginText"
                        android:textSize="25sp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/usernameLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/usernameLabel"
                            android:text="Username"
                            android:textSize="18sp"
                            android:layout_alignBottom="@+id/usernameEditText"/>

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/usernameEditText"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:layout_toRightOf="@id/usernameLabel"
                            android:layout_marginLeft="10dp"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/passwordLayout">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/passwordLabel"
                            android:text="Password"
                            android:textSize="18sp"
                            android:layout_alignBottom="@+id/passwordEditText"/>

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/passwordEditText"
                            android:layout_toRightOf="@id/passwordLabel"
                            android:layout_marginLeft="10dp"/>

                    </RelativeLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/loginButton"
                        android:text="Login"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1.0"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonLayout"
                    android:orientation="horizontal"
                    android:gravity="center|bottom">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_button"
                        android:id="@+id/cachebutton"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/display_button"
                        android:id="@+id/displaybutton"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>